--- a/Syllabus/Syllabus.tex
+++ b/Syllabus/Syllabus.tex
@@ -1217,17 +1217,15 @@ and the final project.
 \hypertarget{course-schedule}{%
 \section{COURSE SCHEDULE}\label{course-schedule}}
 
-\bigbreak
-
-\hypertarget{week-01-0823---0825-introduction-and-course-overview}{%
-\subsection{WEEK 01, 08/23 - 08/25: INTRODUCTION AND COURSE
-OVERVIEW}\label{week-01-0823---0825-introduction-and-course-overview}}
+\hypertarget{week-01-0823---0825-introduction-and-overview-of-course}{%
+\subsection{WEEK 01, 08/23 - 08/25: Introduction and Overview of
+Course}\label{week-01-0823---0825-introduction-and-overview-of-course}}
 
 \bigbreak
 \hrule
 
 \hypertarget{week-02-0830---0901-structural-functionalist-theories-i}{%
-\subsection{WEEK 02, 08/30 - 09/01: STRUCTURAL FUNCTIONALIST THEORIES,
+\subsection{WEEK 02, 08/30 - 09/01: Structural Functionalist Theories,
 I}\label{week-02-0830---0901-structural-functionalist-theories-i}}
 
 \textbf{Required Readings:}
@@ -1244,7 +1242,7 @@ I}\label{week-02-0830---0901-structural-functionalist-theories-i}}
   151-164. Routledge. \colorbox{Goldenrod}{\bf{[E-Posting]}}
 \end{itemize}
 
-\textbf{Assignments Due}
+\textbf{Assignments Due:}
 
 \begin{itemize}
 \tightlist
@@ -1256,10 +1254,10 @@ I}\label{week-02-0830---0901-structural-functionalist-theories-i}}
 \hrule
 
 \hypertarget{week-03-0906---0908-structural-functionalist-theories-ii}{%
-\subsection{WEEK 03, 09/06 - 09/08: STRUCTURAL FUNCTIONALIST THEORIES,
+\subsection{WEEK 03, 09/06 - 09/08: Structural Functionalist Theories,
 II}\label{week-03-0906---0908-structural-functionalist-theories-ii}}
 
-\textbf{Required Readings}
+\textbf{Required Readings:}
 
 \begin{itemize}
 \item
@@ -1272,7 +1270,7 @@ II}\label{week-03-0906---0908-structural-functionalist-theories-ii}}
   \colorbox{Goldenrod}{\bf{[E-Posting]}}
 \end{itemize}
 
-\textbf{Assignments Due}
+\textbf{Assignments Due:}
 
 \begin{itemize}
 \tightlist
@@ -1284,11 +1282,11 @@ II}\label{week-03-0906---0908-structural-functionalist-theories-ii}}
 \hrule
 
 \hypertarget{week-04-0913---0915-symbolic-interactionism-the-work-of-erving-goffman-i}{%
-\subsection{WEEK 04, 09/13 - 09/15: SYMBOLIC INTERACTIONISM \& THE WORK
-OF ERVING GOFFMAN,
+\subsection{WEEK 04, 09/13 - 09/15: Symbolic Interactionism \& the Work
+of Erving Goffman,
 I}\label{week-04-0913---0915-symbolic-interactionism-the-work-of-erving-goffman-i}}
 
-\textbf{Required Readings}
+\textbf{Required Readings:}
 
 \begin{itemize}
 \item
@@ -1305,7 +1303,7 @@ I}\label{week-04-0913---0915-symbolic-interactionism-the-work-of-erving-goffman-
   \colorbox{Goldenrod}{\bf{[E-Posting]}}
 \end{itemize}
 
-\textbf{Assignments Due}
+\textbf{Assignments Due:}
 
 \begin{itemize}
 \tightlist
@@ -1317,10 +1315,10 @@ I}\label{week-04-0913---0915-symbolic-interactionism-the-work-of-erving-goffman-
 \hrule
 
 \hypertarget{week-05-0920---0922-the-work-of-erving-goffman-ii}{%
-\subsection{WEEK 05, 09/20 - 09/22: THE WORK OF ERVING GOFFMAN,
+\subsection{WEEK 05, 09/20 - 09/22: The Work of Erving Goffman,
 II}\label{week-05-0920---0922-the-work-of-erving-goffman-ii}}
 
-\textbf{Required Readings}
+\textbf{Required Readings:}
 
 \begin{itemize}
 \tightlist
@@ -1330,7 +1328,7 @@ II}\label{week-05-0920---0922-the-work-of-erving-goffman-ii}}
   \colorbox{Goldenrod}{\bf{[E-Posting: Read: Introduction and Chapter 1 Only]}}
 \end{itemize}
 
-\textbf{Assignments Due}
+\textbf{Assignments Due:}
 
 \begin{itemize}
 \tightlist
@@ -1346,10 +1344,10 @@ II}\label{week-05-0920---0922-the-work-of-erving-goffman-ii}}
 \hrule
 
 \hypertarget{week-06-0927---0929-power-elite-theories}{%
-\subsection{WEEK 06, 09/27 - 09/29: POWER ELITE
-THEORIES}\label{week-06-0927---0929-power-elite-theories}}
+\subsection{WEEK 06, 09/27 - 09/29: Power Elite
+Theories}\label{week-06-0927---0929-power-elite-theories}}
 
-\textbf{Required Readings}
+\textbf{Required Readings:}
 
 \begin{itemize}
 \item
@@ -1362,7 +1360,7 @@ THEORIES}\label{week-06-0927---0929-power-elite-theories}}
   \emph{82}(2), 309-332. \colorbox{Goldenrod}{\bf{[E-Posting]}}
 \end{itemize}
 
-\textbf{Assignments Due}
+\textbf{Assignments Due:}
 
 \begin{itemize}
 \tightlist
@@ -1374,10 +1372,10 @@ THEORIES}\label{week-06-0927---0929-power-elite-theories}}
 \hrule
 
 \hypertarget{week-07-1004---1006-neo-marxism-and-critical-theories}{%
-\subsection{WEEK 07, 10/04 - 10/06: NEO-MARXISM AND CRITICAL
-THEORIES}\label{week-07-1004---1006-neo-marxism-and-critical-theories}}
+\subsection{WEEK 07, 10/04 - 10/06: Neo-Marxism and Critical
+Theories}\label{week-07-1004---1006-neo-marxism-and-critical-theories}}
 
-\textbf{Required Readings}
+\textbf{Required Readings:}
 
 \begin{itemize}
 \item
@@ -1392,7 +1390,7 @@ THEORIES}\label{week-07-1004---1006-neo-marxism-and-critical-theories}}
   \colorbox{Goldenrod}{\bf{[E-Posting}}
 \end{itemize}
 
-\textbf{Assignments Due}
+\textbf{Assignments Due:}
 
 \begin{itemize}
 \tightlist
@@ -1404,11 +1402,11 @@ THEORIES}\label{week-07-1004---1006-neo-marxism-and-critical-theories}}
 \hrule
 
 \hypertarget{week-08-1011---1013-post-structuralism-the-work-of-michel-foucault-i}{%
-\subsection{WEEK 08, 10/11 - 10/13 POST-STRUCTURALISM \& THE WORK OF
-MICHEL FOUCAULT,
+\subsection{WEEK 08, 10/11 - 10/13 Post-Structuralism \& the Work of
+Michel Foucault,
 I}\label{week-08-1011---1013-post-structuralism-the-work-of-michel-foucault-i}}
 
-\textbf{Required Readings}
+\textbf{Required Readings:}
 
 \begin{itemize}
 \item
@@ -1421,7 +1419,7 @@ I}\label{week-08-1011---1013-post-structuralism-the-work-of-michel-foucault-i}}
   \emph{8}(4), 777-795. \colorbox{Goldenrod}{\bf{[E-Posting]}}
 \end{itemize}
 
-\textbf{Assignments Due}
+\textbf{Assignments Due:}
 
 \begin{itemize}
 \tightlist
@@ -1433,10 +1431,10 @@ I}\label{week-08-1011---1013-post-structuralism-the-work-of-michel-foucault-i}}
 \hrule
 
 \hypertarget{week-09-1018---1020-the-work-of-michel-foucault-ii}{%
-\subsection{WEEK 09, 10/18 - 10/20: THE WORK OF MICHEL FOUCAULT,
+\subsection{WEEK 09, 10/18 - 10/20: The Work of Michel Foucault,
 II}\label{week-09-1018---1020-the-work-of-michel-foucault-ii}}
 
-\textbf{Required Readings}
+\textbf{Required Readings:}
 
 \begin{itemize}
 \item
@@ -1449,7 +1447,7 @@ II}\label{week-09-1018---1020-the-work-of-michel-foucault-ii}}
   \colorbox{Goldenrod}{\bf{[E-Posting: Read: 15-73 only]}}
 \end{itemize}
 
-\textbf{Assignments Due}
+\textbf{Assignments Due:}
 
 \begin{itemize}
 \tightlist
@@ -1465,49 +1463,140 @@ II}\label{week-09-1018---1020-the-work-of-michel-foucault-ii}}
 \hrule
 
 \hypertarget{week-10-1025---1027-theories-of-socialcultural-reproduction-inequality-the-work-of-pierre-bourdieu-i}{%
-\subsection{WEEK 10, 10/25 - 10/27: THEORIES OF SOCIAL/CULTURAL
-REPRODUCTION \& INEQUALITY: THE WORK OF PIERRE BOURDIEU
+\subsection{WEEK 10, 10/25 - 10/27: Theories of Social/Cultural
+Reproduction \& Inequality: The Work of Pierre Bourdieu,
 I}\label{week-10-1025---1027-theories-of-socialcultural-reproduction-inequality-the-work-of-pierre-bourdieu-i}}
+
+\textbf{Required Readings:}
+
+\begin{itemize}
+\item
+  Dillon M (2020). \emph{Introduction to Sociological Theory: Theorists,
+  Concepts, and their Applicabilityto the Twenty-First Century}, 3
+  edition. Wiley-Blackwell, Hoboken, NJ. ISBN 978-1-119-41091-1.
+  \textcolor{BrickRed}{\bf{[Read: Chapter 13]}}
+\item
+  Bourdieu P (1994). ``Structures, Habitus, Power: Basis for a Theory of
+  Symbolic Power.'' In Dirks NB, Eley G, Ortner SB (eds.),
+  \emph{Culture/Power/History: A Reader in Contemporary Social Theory},
+  volume 12, 155-199. Princeton University Press. \textless URL:
+  \url{https://doi.org/10.2307/j.ctv1ddd17k}\textgreater.
+  \colorbox{Goldenrod}{\bf{[E-Posting]}}
+\end{itemize}
+
+\textbf{Assignments Due:}
 
 \begin{itemize}
 \tightlist
 \item
+  Weekly Perusall Participation
 \end{itemize}
 
 \bigbreak
 \hrule
 
 \hypertarget{week-11-1101---1103-the-work-of-pierre-bourdieu-ii}{%
-\subsection{WEEK 11, 11/01 - 11/03: THE WORK OF PIERRE BOURDIEU,
+\subsection{WEEK 11, 11/01 - 11/03: The Work of Pierre Bourdieu,
 II}\label{week-11-1101---1103-the-work-of-pierre-bourdieu-ii}}
 
 \begin{itemize}
 \tightlist
 \item
+  Bourdieu P (1991). \emph{Language and symbolic power}, 1 edition.
+  Polity Press, Cambridge. ISBN 978-0-7456-0097-0 978-0-7456-1034-4.
+  \colorbox{Goldenrod}{\bf{[E-Posting: Read: pp. 43-65 and 163-170]}}
+\end{itemize}
+
+\textbf{Assignments Due:}
+
+\begin{itemize}
+\tightlist
+\item
+  Weekly Perusall Participation
 \end{itemize}
 
 \bigbreak
 \hrule
 
 \hypertarget{week-12-1108---1110-theories-of-race-ethnicity-i}{%
-\subsection{WEEK 12, 11/08 - 11/10: THEORIES OF RACE \& ETHNICITY,
+\subsection{WEEK 12, 11/08 - 11/10: Theories of Race \& Ethnicity,
 I}\label{week-12-1108---1110-theories-of-race-ethnicity-i}}
+
+\textbf{Required Readings:}
+
+\begin{itemize}
+\item
+  Omi M, Winant H (2020). ``Racial Formation.'' In \emph{The New Social
+  Theory Reader}, 405-415. Routledge.
+  \colorbox{Goldenrod}{\bf{[E-Posting]}}
+\item
+  Feagin J, Elias S (2013). ``Rethinking Racial Formation Theory: A
+  Systemic Racism Critique.'' \emph{Ethnic and Racial Studies},
+  \emph{36}(6), 931-960. doi: 10.1080/01419870.2012.669839 (URL:
+  \url{https://doi.org/10.1080/01419870.2012.669839}).
+  \colorbox{Goldenrod}{\bf{[E-Posting]}}
+\item
+  Winant H (2000). ``Race and Race Theory.'' \emph{Annual Review of
+  Sociology}, \emph{26}(1), 169-185. ISSN 0360-0572, 1545-2115, doi:
+  10.1146/annurev.soc.26.1.169 (URL:
+  \url{https://doi.org/10.1146/annurev.soc.26.1.169}), \textless URL:
+  \url{https://www.annualreviews.org/doi/10.1146/annurev.soc.26.1.169}\textgreater.
+  \colorbox{Goldenrod}{\bf{[E-Posting]}}
+\end{itemize}
+
+\textbf{Assignments Due:}
 
 \begin{itemize}
 \tightlist
 \item
+  Weekly Perusall Participation
 \end{itemize}
 
 \bigbreak
 \hrule
 
 \hypertarget{week-13-1115---1117-theories-of-race-ethnicity-ii}{%
-\subsection{WEEK 13, 11/15 - 11/17: THEORIES OF RACE \& ETHNICITY,
+\subsection{WEEK 13, 11/15 - 11/17: Theories of Race \& Ethnicity,
 II}\label{week-13-1115---1117-theories-of-race-ethnicity-ii}}
+
+\textbf{Required Readings:}
+
+\begin{itemize}
+\item
+  Lee J, Bean FD (2004). ``America's Changing Color Lines: Immigration,
+  Race/Ethnicity, and Multiracial Identification.'' \emph{Annual Review
+  of Sociology}, \emph{30}(1), 221-242. ISSN 0360-0572, 1545-2115, doi:
+  10.1146/annurev.soc.30.012703.110519 (URL:
+  \url{https://doi.org/10.1146/annurev.soc.30.012703.110519}),
+  \textless URL:
+  \url{https://www.annualreviews.org/doi/10.1146/annurev.soc.30.012703.110519}\textgreater.
+  \colorbox{Goldenrod}{\bf{[E-Posting]}}
+\item
+  Wilson WJ (2011). ``The Declining Significance of Race: Revisited \&
+  Revised.'' \emph{Daedalus}, \emph{140}(2), 55-69. ISSN 0011-5266, doi:
+  10.1162/DAED\_a\_00077 (URL:
+  \url{https://doi.org/10.1162/DAED_a_00077}), \textless URL:
+  \url{https://doi.org/10.1162/DAED_a_00077}\textgreater.
+  \colorbox{Goldenrod}{\bf{[E-Posting]}}
+\item
+  Bonilla-Silva E (2022). ``Color-Blind Racism in Pandemic Times.''
+  \emph{Sociology of Race and Ethnicity}, \emph{8}(3), 343-354. ISSN
+  2332-6492, 2332-6506, doi: 10.1177/2332649220941024 (URL:
+  \url{https://doi.org/10.1177/2332649220941024}), \textless URL:
+  \url{http://journals.sagepub.com/doi/10.1177/2332649220941024}\textgreater.
+  \colorbox{Goldenrod}{\bf{[E-Posting]}}
+\end{itemize}
+
+\textbf{Assignments Due:}
 
 \begin{itemize}
 \tightlist
 \item
+  Weekly Perusall Participation
+\item
+  \textbf{Paper \#3 due on Sunday by 11:59 p.m.}
+\item
+  \textbf{Quiz \#3 must be completed by Friday 11:59 p.m.}
 \end{itemize}
 
 \bigbreak
@@ -1520,14 +1609,14 @@ BREAK!}\label{week-14-1122---1124-fall-break---no-classes---enjoy-your-break}}
 \begin{itemize}
 \tightlist
 \item
-  \textbf{No required readings or assignments due this week}
+  \textcolor{BurntOrange}{\bf{No required readings or assignments due this week.}}
 \end{itemize}
 
 \bigbreak
 \hrule
 
 \hypertarget{week-15-1129---1201-feminist-theories-i}{%
-\subsection{WEEK 15, 11/29 - 12/01: FEMINIST THEORIES,
+\subsection{WEEK 15, 11/29 - 12/01: Feminist Theories,
 I}\label{week-15-1129---1201-feminist-theories-i}}
 
 \begin{itemize}
@@ -1539,7 +1628,7 @@ I}\label{week-15-1129---1201-feminist-theories-i}}
 \hrule
 
 \hypertarget{week-16-1206---1208-feminist-theories-ii}{%
-\subsection{WEEK 16, 12/06 - 12/08: FEMINIST THEORIES,
+\subsection{WEEK 16, 12/06 - 12/08: Feminist Theories
 II}\label{week-16-1206---1208-feminist-theories-ii}}
 
 \begin{itemize}
