--- a/Syllabus/general_components/soci301_bib_main.bib
+++ b/Syllabus/general_components/soci301_bib_main.bib
@@ -179,12 +179,8 @@
 @article{wilson_declining_2011,
 	title = {The {Declining} {Significance} of {Race}: {Revisited} \& {Revised}},
 	volume = {140},
-	issn = {0011-5266},
-	url = {https://doi.org/10.1162/DAED_a_00077},
-	doi = {10.1162/DAED_a_00077},
 	abstract = {Wilson reflects on the nearly eight hundred research studies that claim to provide an empirical test of the arguments presented in his book The Declining Significance of Race (1978; second edition, 1980). Wilson considers representative studies that incorrectly address his book, before discussing those publications that correctly address his thesis, including those that uphold, partially support, or challenge his arguments and basic claims. In the process, Wilson explores how some of these studies led him to revise or extend parts of his basic thesis, especially as it pertains to race and interracial relations today. Wilson also takes into account changes within the African American population since he wrote The Declining Significance of Race. He reveals how his thoughts have changed with respect to both race- and class-based solutions for the problems faced by people of color.},
 	number = {2},
-	urldate = {2022-07-29},
 	journal = {Daedalus},
 	author = {Wilson, William Julius},
 	month = apr,
@@ -211,7 +207,6 @@
 @article{feagin_rethinking_2013,
 	title = {Rethinking {Racial} {Formation} {Theory}: {A} {Systemic} {Racism} {Critique}},
 	volume = {36},
-	doi = {https://doi.org/10.1080/01419870.2012.669839},
 	abstract = {In this theoretical analysis of US racism, we examine contributions and deficiencies of Michael Omi and Howard Winant's influential racial formation theory from the critical perspective of systemic racism theory. Analysing important concepts and arguments in both theoretical frameworks, we demonstrate that racial formation theory inadequately explains: racial meanings and white racial framing; US society's racial foundation; the US state and other sites of racial contestation; whites' and white elites’ centrality in contemporary racism; challenges to a racially pluralistic democracy; and group resistance to racism, especially that of the black ‘radical’ intellectual tradition. We find racial formation theory provides some innovative concepts that move beyond outdated mainstream ethnicity/assimilation theories, but that formation theory lacks the conceptual tools for fully understanding the deep foundation, layered complexities, and institutionalized operations of systemic racism in the USA.},
 	language = {en},
 	number = {6},
@@ -237,9 +232,6 @@
 @article{winant_race_2000,
 	title = {Race and {Race} {Theory}},
 	volume = {26},
-	issn = {0360-0572, 1545-2115},
-	url = {https://www.annualreviews.org/doi/10.1146/annurev.soc.26.1.169},
-	doi = {10.1146/annurev.soc.26.1.169},
 	abstract = {Race has always been a significant sociological theme, from the founding of the field and the formulation of classical theoretical statements to the present. Since the nineteenth century, sociological perspectives on race have developed and changed, always reflecting shifts in large-scale political processes. In the classical period, colonialism and biologistic racism held sway. As the twentieth century dawned, sociology came to be dominated by US-based figures. DuBois and the Chicago School presented the first notable challenges to the field's racist assumptions. In the aftermath of World War II, with the destruction of European colonialism, the rise of the civil rights movement, and the surge in migration on a world scale, the sociology of race became a central topic. The field moved toward a more critical, more egalitarian awareness of race, focused particularly on the overcoming of prejudice and discrimination. Although the recognition of these problems increased and political reforms made some headway in combatting them, racial injustice and inequality were not surmounted. As the global and domestic politics of race entered a new period of crisis and uncertainty, so too has the field of sociology. To tackle the themes of race and racism once again in the new millennium, sociology must develop more effective racial theory. Racial formation approaches can offer a starting point here. The key tasks will be the formulation of a more adequate comparative historical sociology of race, the development of a deeper understanding of the micro-macro linkages that shape racial issues, and the recognition of the pervasiveness of racial politics in contemporary society. This is a challenging but also exciting agenda. The field must not shrink from addressing it.},
 	language = {en},
 	number = {1},
@@ -291,10 +283,7 @@
 @article{lee_americas_2004,
 	title = {America's {Changing} {Color} {Lines}: {Immigration}, {Race}/{Ethnicity}, and {Multiracial} {Identification}},
 	volume = {30},
-	issn = {0360-0572, 1545-2115},
 	shorttitle = {America's {Changing} {Color} {Lines}},
-	url = {https://www.annualreviews.org/doi/10.1146/annurev.soc.30.012703.110519},
-	doi = {10.1146/annurev.soc.30.012703.110519},
 	abstract = {Over the past four decades, immigration has increased the racial and ethnic diversity in the United States. Once a mainly biracial society with a large white majority and relatively small black minority—and an impenetrable color line dividing these groups—the United States is now a society composed of multiple racial and ethnic groups. Along with increased immigration are rises in the rates of racial/ethnic intermarriage, which in turn have led to a sizeable and growing multiracial population. Currently, 1 in 40 persons identifies himself or herself as multiracial, and this figure could soar to 1 in 5 by the year 2050. Increased racial and ethnic diversity brought about by the new immigration, rising intermarriage, and patterns of multiracial identification may be moving the nation far beyond the traditional and relatively persistent black/white color line. In this chapter, we review the extant theories and recent findings concerning immigration, intermarriage, and multiracial identification, and consider the implications for America's changing color lines. In particular, we assess whether racial boundaries are fading for all groups or whether America's newcomers are simply crossing over the color line rather than helping to eradicate it.},
 	language = {en},
 	number = {1},
@@ -328,6 +317,7 @@
 	author = {Merton, Robert K.},
 	year = {1938},
 	pages = {672--682},
+	file = {merton,r_social_structure_anomie.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 301 - Contemporary Social Theory/readings/merton,r_social_structure_anomie.pdf:application/pdf},
 }
 
 @article{davis_principles_1945,
@@ -353,4 +343,32 @@
 	year = {1982},
 	pages = {777--795},
 	file = {foucaul,m_subject&power.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 301 - Contemporary Social Theory/readings/foucaul,m_subject&power.pdf:application/pdf},
+}
+
+@incollection{omi_racial_2020,
+	title = {Racial {Formation}},
+	booktitle = {The {New} {Social} {Theory} {Reader}},
+	publisher = {Routledge},
+	author = {Omi, Michael and Winant, Howard},
+	year = {2020},
+	pages = {405--415},
+	file = {omi,m&winant,h_racial_formation.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 301 - Contemporary Social Theory/readings/omi,m&winant,h_racial_formation.pdf:application/pdf},
+}
+
+@article{bonilla-silva_color-blind_2022,
+	title = {Color-{Blind} {Racism} in {Pandemic} {Times}},
+	volume = {8},
+	issn = {2332-6492, 2332-6506},
+	url = {http://journals.sagepub.com/doi/10.1177/2332649220941024},
+	doi = {10.1177/2332649220941024},
+	abstract = {In this article the author examines how the frameworks of color-blind racism have influenced many topics during the pandemic. Using readily available material from popular culture (TV shows, newspaper and magazine articles, and advertisements) and from statements by government officials, the author examines how color blindness has shaped our national discussion on essential workers and heroes, charity, and differential mortality. The main argument is that color-blind racism is limiting our understanding of the structural nature of the various racial problems coronavirus disease 2019 has revealed, making it difficult to envision the kinds of policies needed to address them. the author concludes by summarizing what these ideological perspectives block from view as well as addressing the nascent discursive cracks that might be used to produce alternative frames for interpreting matters and organizing collective action.},
+	language = {en},
+	number = {3},
+	urldate = {2022-07-30},
+	journal = {Sociology of Race and Ethnicity},
+	author = {Bonilla-Silva, Eduardo},
+	month = jul,
+	year = {2022},
+	pages = {343--354},
+	file = {bonilla-silva,e_colorblind_racism.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 301 - Contemporary Social Theory/readings/bonilla-silva,e_colorblind_racism.pdf:application/pdf},
 }
